c2prj1_cards/grade.txt
Grading at Mon Jun 22 15:16:40 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:65:5: error: expected ‘}’ before ‘else’
     else
     ^
Could not compile your card.c!

Overall Grade: FAILED
